<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/climabackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="108dp"
        android:layout_height="88dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="serif"
        android:text="@string/texto_grados"
        android:textAlignment="center"
        android:textColor="@color/colorGrados"
        android:textSize="76sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="311dp"
        android:layout_height="155dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/tvEstatus"
        android:layout_alignStart="@+id/tvEstatus"
        android:layout_alignEnd="@+id/tvEstatus"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="-94dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="-111dp"
        android:fontFamily="@string/texto_grados"
        android:text="@string/texto_ciudad"
        android:textAlignment="center"
        android:textColor="@color/colorCiudad"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/tvGrados"
        android:layout_alignEnd="@+id/tvGrados"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:text="@string/texto_estatus"
        android:textAlignment="center"
        android:textColor="@color/colorGrados"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageClima"
        android:layout_width="157dp"
        android:layout_height="148dp"
        android:layout_below="@+id/tvCiudad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="109dp"
        android:background="@android:color/transparent" />
</RelativeLayout>